src/test/deca/context/invalid/object/mismatch-type.deca
// Description :
//  Test surcharge de méthode avec un type de retour incompatible.
// Résultats :
//    Erreur : overrideMethod method override is invalid: mismatch in return type, 
//             expected: 'int', got 'float'.
// Historique :
//    créé le 19/01/2025
class Parent {
    int overrideMethod() {
        return 42;
    }
}

class Child extends Parent {
    float overrideMethod() { 
        return 42.0;
    }
}